--- a/Desafio 2 - Recriando o Netflix/css/style.css
+++ b/Desafio 2 - Recriando o Netflix/css/style.css
@@ -13,7 +13,7 @@
 body{
     background-color: black;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: var(--violeta);
+    color: wheat;
 }
 
 header{
@@ -67,6 +67,12 @@ header .container{
     font-style: italic;
     font-family: 'Trebuchet MS', Arial, sans-serif;
     color: var(--rosa);
+}
+
+.subtitulo{
+    font-style: italic;
+    font-family: 'Trebuchet MS', Arial, sans-serif;
+    color: var(--violeta);
 }
 
 .botao{
